WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248938
[Lockdown Mode] Web Font Quality of Life Improvement
https://bugs.webkit.org/show_bug.cgi?id=248938
Summary
[Lockdown Mode] Web Font Quality of Life Improvement
Vitor Roriz
Reported
2022-12-08 01:56:13 PST
Lockdown mode prevents WebKit from downloading web fonts. We could allow the loading of popular fonts to improve quality of life. We can start by targeting font-awesome. Steps To Reproduce: 1. In lockdown mode, go to apple.com in Safari, an SFViewController or a WKWebView. 2. See that the various arrow icons are replaced with boxes Results: Glyph substitutes are displayed, adversely affecting the UX of the webpage.
Attachments
Add attachment
proposed patch, testcase, etc.
Vitor Roriz
Comment 1
2022-12-09 10:09:27 PST
<
rdar://problem/101523138
>
Vitor Roriz
Comment 2
2022-12-09 10:16:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7392
EWS
Comment 3
2022-12-15 13:15:22 PST
Committed
257954@main
(6198c51976a3): <
https://commits.webkit.org/257954@main
> Reviewed commits have been landed. Closing PR #7392 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug